syntax = "proto3";

package room_message;

option go_package = "./proto";

// message RoomSupply {
//     string type = 1;
//     bool on = 2;
//     int32 areaCode = 3;
// }

message Supply {
    int32 senderId = 1;
    string resourceType = 2;
    bool resouceAvailability = 3;
}

// message Empty {}

// message Sub {
//     int32 areaCode = 1;
// }

service RoomGRPC {
    // rpc Electricity(Source) returns (Empty) {}
    // rpc Air(Source) returns (Empty) {}
    // rpc RoomSubscribe(Sub) returns (stream Supply){}
    rpc RoomSubscribe(stream Supply) returns (stream Supply){}
}